--- a/Headers/theory.html
+++ b/Headers/theory.html
@@ -7,6 +7,7 @@
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
         <title data-pgc-field="page_title">Theory</title>
+		<script src="../header.js"></script>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
@@ -32,7 +33,7 @@
             <p class="lead"></p>
             <p>A detailed discussion of the theoretical background is provided in
              <a href="theory1_2022.pdf">this document</a>.</p>
-            <p>For an illustration of math in web pages, click <a href="practicemath.html">here</a>.</p>
+            <p>For an illustration of math in web pages, click <a href="../practicemath.html">here</a>.</p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
@@ -41,6 +42,6 @@
 		<script src="../assets/js/jquery.min.js"></script>
         <script src="../assets/js/popper.js"></script>
         <script src="../bootstrap/js/bootstrap.min.js"></script>
-		<script src="../header.js"></script>
+		
     </body>
 </html>
