--- a/Headers/Documentation/EquationSolver/Methods/EquationSolverConstructor.html
+++ b/Headers/Documentation/EquationSolver/Methods/EquationSolverConstructor.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">GetDvdδdot</title>
+        <title data-pgc-field="page_title">EquationSolver Constructor</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -44,7 +44,7 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">GetDvdδdot</h1>
+                <h1 data-pgc-field="page_heading">EquationSolver Constructor</h1>
                 <div class="mt-3"><span class="badge badge-secondary">Method</span>
                     <span class="badge badge-secondary">Spin Case</span>
                     <span class="badge badge-secondary">EquationSolver</span>
@@ -53,11 +53,12 @@
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">This method calculates and returns \( \partial \dot{v} \over \partial \delta \).</p>
+            <p class="lead" data-pgc-field="page_description">Initializes all relevant properties of the EquationSolver Class</p>
             <p class="lead" data-pgc-field="page_lead"></p>
             <p data-pgc-field="page_info"><dl> 
                     <dt class="h5">Technical description:</dt> 
-                    <dd>The purpose of this code is to determine \( \partial \dot{v} \over \partial \delta \): the rate of change of \( \partial v \over \partial \delta \) with respect to a dimensionless time \( \tau_s = \frac{t_{s}}{M} \) in the source frame.&nbsp; See the theororetical description for information about how a formula for \( \partial \dot{v} \over \partial \delta \) was derived.</dd>
+                    <dd>Initializes c1 - c25,&nbsp;δ, η, χs, χa,&nbsp;dηdδ, dχsdδ, dχsdχ1ℓ, dχsdχ2ℓ, dχadδ, dχadχ1ℓ, dχadχ2ℓ,&nbsp;χ1 and&nbsp;χ2. Descriptions of these values can be found on the <a href="EquationSolver.html">EquationSolver class page</a>.
+                    </dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
                             <tr> 
@@ -68,14 +69,9 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">v</th> 
-                                <td>Double</td> 
-                                <td>Our post newtonian expansion factor \(v = (M \omega)^\frac{1}{3} \).</td> 
-                            </tr>                             
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>dvdδ</p></th> 
-                                <td>Double</td>
-                                <td>\( \partial v \over \partial \delta \)</td> 
+                                <th scope="row" class="font-weight-normal">None</th> 
+                                <td>N/A</td> 
+                                <td>N/A</td> 
                             </tr>                             
                         </tbody>                         
                     </table>
@@ -89,30 +85,25 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">dvdδdot</th> 
-                                <td>Double</td> 
-                                <td>\( \partial \dot{v} \over \partial \delta \)</td> 
+                                <th scope="row" class="font-weight-normal">None</th> 
+                                <td>N/A</td> 
+                                <td>N/A</td> 
                             </tr>                             
                         </tbody>                         
                     </table>                     
-                    <dt class="h5">Theoretical description:</dt> 
-                    <dd>The derivation for how&nbsp;\( \partial \dot{v} \over \partial \delta \) can be calculated can be found in <a href="DerivativeExpressions.html">Equation (1)</a> of the DerivativeExpressions document.
-                    </dd>
                     <dt class="h5">Usage locations:</dt>
-                    <dd>This method is used in the <a href="InitDvdδ.html">InitDvdδ</a> method of the Evolver class to initialize the first two values of&nbsp;\( \partial v \over \partial \delta \), it is also used in the <a href="DoStep.html">DoStep</a> method to propegate \( \partial v \over \partial \delta \) through time.&nbsp;
+                    <dd>This method is called each time a new instance of the EquationSolver class is created. Most importantly an instance of this class is created in the constructor of the <a href="Evolver.html">Evolver class</a>, which is used throughout that method to aid in calculations.
                     </dd>
-                    <dt class="h5">Usage example:</dt>
                     <dd class="bg-light ml-4 shadow-sm">
-                        <code class="text-secondary">GetDvdδdot(vN,dvdδN)</code>
-                    </dd>                     
+</dd>                     
                 </dl></p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
