--- a/Headers/Documentation/EquationSolver/Methods/GetDvdδ.html
+++ b/Headers/Documentation/EquationSolver/Methods/GetDvdδ.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">GetΩ1Coef</title>
+        <title data-pgc-field="page_title">GetDvdδ</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -51,7 +51,7 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">GetΩ1Coef</h1>
+                <h1 data-pgc-field="page_heading">GetDvdδ</h1>
                 <div class="mt-3">
                     <span class="badge badge-secondary">Method</span><span class="badge badge-secondary">Spin Case</span><span class="badge badge-secondary">EquationSolver</span>
                     <div>
@@ -59,12 +59,11 @@
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">This method calculates the scalar that \( \hat{L}_N \) must be multiplied by to obtain \( \vec{\Omega}_1 \).</p>
+            <p class="lead" data-pgc-field="page_description">This method calculates and returns \( \partial v \over \partial \delta \) given \(v\) and&nbsp;\( \partial \dot{v} \over \partial \delta \).</p>
             <p class="lead" data-pgc-field="page_lead"></p>
-            <p data-pgc-field="page_info"><dl> 
+            <p data-pgc-field="page_info"><dl>
                     <dt class="h5">Technical description:</dt> 
-                    <dd>This method calculates the scalar that \( \hat{L}_N \) must be multiplied by to obtain \( \vec{\Omega}_1 \). This method cleans up calculations done in the Evolver class&apos;s <a href="DoStep.html">DoStep</a> method.
-                    </dd>
+                    <dd>This method calculates and returns \( \partial v \over \partial \delta \) given \(v\) and \( \partial \dot{v} \over \partial \delta \). See the theoretical description for how this is done.&nbsp;</dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
                             <tr> 
@@ -75,9 +74,14 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal"><p>dτ</p></th> 
+                                <th scope="row" class="font-weight-normal">v</th> 
                                 <td>Double</td> 
-                                <td>A small step of dimensionless&nbsp;time \( \tau_s = \frac{t_{s}}{M} \) in the source frame.</td> 
+                                <td>Our post newtonian expansion factor \(v = (M \omega)^\frac{1}{3} \).</td> 
+                            </tr>                             
+                            <tr> 
+                                <th scope="row" class="font-weight-normal"><p>dvdδdot</p></th> 
+                                <td>Double</td>
+                                <td>\( \partial \dot{v} \over \partial \delta \)</td> 
                             </tr>                             
                         </tbody>                         
                     </table>
@@ -91,29 +95,31 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">Ω1Coef</th> 
+                                <th scope="row" class="font-weight-normal">dvdδ</th> 
                                 <td>Double</td> 
-                                <td>The coefficient that will multiply&nbsp; \( \hat{L}_N \) to obtain \( \vec{\Omega}_1 \).</td> 
+                                <td>\( \partial v \over \partial \delta \)</td> 
                             </tr>                             
                         </tbody>                         
                     </table>                     
                     <dt class="h5">Theoretical description:</dt> 
-                    <dd>See <a href="Theory1_2022.pdf">Equation (1.29)</a> of the Theory1 document to see the expression for \(\vec{\Omega}_1 \), as well as how it is used to calculate the rate of change of star 1&apos;s angular momentum.
+                    <dd>
+                        <dd>The derivation of the equation used to calculate&nbsp;\( \partial v \over \partial \delta \) given \(v\) and \( \partial \dot{v} \over \partial \delta \) can be found by rearranging <a href="DerivativeExpressions.html">Equation (1)</a> in the DerivativeExpressions document for&nbsp;\( \partial v \over \partial \delta \).
+                        </dd><span style="color: inherit; font-family: inherit; font-size: 1.25rem;">Usage locations:</span><br/>
                     </dd>
-                    <dt class="h5">Usage locations:</dt>
-                    <dd>This method is called in the Evolver class&apos;s <a href="InitSpinVariables.html">InitSpinVariables</a> method to intialiaze \( \hat{L}_N \). It is also called in the <a href="DoStep.html">DoStep</a> method to propegate \(\hat{ \chi_1 } \).
+                    <dd>This method is used in the <a href="InitDvdδ.html">InitDvdδ</a> method of the Evolver class to initialize the first two values of&nbsp;\( \partial v \over \partial \delta \). For all of the rest of the values of&nbsp;\( \partial v \over \partial \delta \) the leapfrog method is used.&nbsp;
                     </dd>
                     <dt class="h5">Usage example:</dt>
-                    <dd class="bg-light ml-4 shadow-sm"><code class="text-secondary">GetΩ1Coef(dτ)</code>
-                    </dd>                     
+                    <dd class="bg-light ml-4 shadow-sm">
+                        <code class="text-secondary">GetDvdδ(vN,dvdδdotN)</code>
+                    </dd>
                 </dl></p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
