--- a/Headers/Documentation/EquationSolver/Methods/GetDvdδdot.html
+++ b/Headers/Documentation/EquationSolver/Methods/GetDvdδdot.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">GetLNhatdot</title>
+        <title data-pgc-field="page_title">GetDvdδdot</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -44,7 +44,7 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">GetLNhatdot</h1>
+                <h1 data-pgc-field="page_heading">GetDvdδdot</h1>
                 <div class="mt-3"><span class="badge badge-secondary">Method</span>
                     <span class="badge badge-secondary">Spin Case</span>
                     <span class="badge badge-secondary">EquationSolver</span>
@@ -53,11 +53,11 @@
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">This method calculates and returns \(\dot{\hat{L}}_N \)</p>
+            <p class="lead" data-pgc-field="page_description">This method calculates and returns \( \partial \dot{v} \over \partial \delta \).</p>
             <p class="lead" data-pgc-field="page_lead"></p>
             <p data-pgc-field="page_info"><dl> 
                     <dt class="h5">Technical description:</dt> 
-                    <dd>The purpose of this code is to determine \(\dot{\hat{L}}_N \): the rate of change of&nbsp;\(\hat{L}_N\) with respect to a dimensionless time \( \tau_s = \frac{t_{s}}{M} \) in the source frame. The code first defines two vectors:&nbsp; \( \vec{v}_1 = |\vec{\chi_1}|(1+\delta)^2 \vec{\Omega}_1 \times\hat{\chi}_1 \) and&nbsp; \( \vec{v}_2 = |\vec{\chi_2}|(1-\delta)^2 \vec{\Omega}_2 \times \hat{\chi}_2 \). Then it calculates \( \dot{\hat{L}}_N = - \frac{v}{4 \eta} (\vec{v}_1 + \vec{v}_2) \). Finally the code returns \(\dot{\hat{L}}_N\). See the theororetical description for an expanation on how these equations were derived.</dd>
+                    <dd>The purpose of this code is to determine \( \partial \dot{v} \over \partial \delta \): the rate of change of \( \partial v \over \partial \delta \) with respect to a dimensionless time \( \tau_s = \frac{t_{s}}{M} \) in the source frame.&nbsp; See the theororetical description for information about how a formula for \( \partial \dot{v} \over \partial \delta \) was derived.</dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
                             <tr> 
@@ -73,24 +73,9 @@
                                 <td>Our post newtonian expansion factor \(v = (M \omega)^\frac{1}{3} \).</td> 
                             </tr>                             
                             <tr> 
-                                <th scope="row" class="font-weight-normal"><p>χ1hat</p></th> 
-                                <td>Vector</td>
-                                <td>The unit vector that points in the direction of star 1&apos;s spin angular momentum.</td> 
-                            </tr>                             
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>χ1hat</p></th> 
-                                <td>Vector</td> 
-                                <td>The unit vector that points in the direction of star 2&apos;s spin angular momentum.</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>Ω1</p></th> 
-                                <td>Vector</td> 
-                                <td>\( \vec{\Omega}_1 \) is a quantity useful in calculating the rate of change of star 1&apos;s angular momentum. See <a href="Theory1_2022.html">Equation 1.29b</a> for the definition of \( \vec{\Omega}_1 \).</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>Ω2</p></th> 
-                                <td>Vector</td> 
-                                <td>\( \vec{\Omega}_2 \) is a quantity useful in calculating the rate of star 2&apos;s angular momentum. See <a href="file:///Users/coreydibianco/Downloads/InProgress/Theory1_2022.html">Equation 1.29b</a> for the definition of \( \vec{\Omega}_2 \).</td> 
+                                <th scope="row" class="font-weight-normal"><p>dvdδ</p></th> 
+                                <td>Double</td>
+                                <td>\( \partial v \over \partial \delta \)</td> 
                             </tr>                             
                         </tbody>                         
                     </table>
@@ -104,20 +89,21 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">LNhatdot</th> 
-                                <td>Vector</td> 
-                                <td>The rate of change of the direction of the total angualar momentum of our system.&nbsp;</td> 
+                                <th scope="row" class="font-weight-normal">dvdδdot</th> 
+                                <td>Double</td> 
+                                <td>\( \partial \dot{v} \over \partial \delta \)</td> 
                             </tr>                             
                         </tbody>                         
                     </table>                     
                     <dt class="h5">Theoretical description:</dt> 
-                    <dd>The derivation for how&nbsp;\( \dot{\hat{L}}_N \) can be calculated can be found on page 9 of the theory doument in <a href="Theory1_2022.html">Equation 1.31</a>.
+                    <dd>The derivation for how&nbsp;\( \partial \dot{v} \over \partial \delta \) can be calculated can be found in <a href="DerivativeExpressions.html">Equation (1)</a> of the DerivativeExpressions document.
                     </dd>
                     <dt class="h5">Usage locations:</dt>
-                    <dd>This method is called in the InitSpinVariables method of the evolver class, and in the <a href="DoStep.html">DoStep</a> method of the evolver class.
+                    <dd>This method is used in the <a href="InitDvdδ.html">InitDvdδ</a> method of the Evolver class to initialize the first two values of&nbsp;\( \partial v \over \partial \delta \), it is also used in the <a href="DoStep.html">DoStep</a> method to propegate \( \partial v \over \partial \delta \) through time.&nbsp;
                     </dd>
                     <dt class="h5">Usage example:</dt>
-                    <dd class="bg-light ml-4 shadow-sm"><code class="text-secondary">GetdLNhatdot(vN, χ1hatN, χ2hatN, Ω1hatN, Ω2hatN)</code>
+                    <dd class="bg-light ml-4 shadow-sm">
+                        <code class="text-secondary">GetDvdδdot(vN,dvdδN)</code>
                     </dd>                     
                 </dl></p>
         </div>
@@ -125,8 +111,8 @@
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
