--- a/Headers/Documentation/EquationSolver/Methods/GetDvdχ1ℓ.html
+++ b/Headers/Documentation/EquationSolver/Methods/GetDvdχ1ℓ.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">GetDvdδ</title>
+        <title data-pgc-field="page_title">GetDvdχ1ℓ</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -51,19 +51,19 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">GetDvdδ</h1>
+                <h1 data-pgc-field="page_heading">GetDvdχ1ℓ</h1>
                 <div class="mt-3">
-                    <span class="badge badge-secondary">Method</span><span class="badge badge-secondary">Spin Case</span><span class="badge badge-secondary">EquationSolver</span>
+                    <span class="badge badge-secondary">Method</span><span class="badge badge-secondary">(Function, i.e. spin, matrix, time evolution, etc.)</span><span class="badge badge-secondary">Parent Class</span><span class="badge badge-secondary">etc.</span>
                     <div>
                         <p></p>
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">This method calculates and returns \( \partial v \over \partial \delta \) given \(v\) and&nbsp;\( \partial \dot{v} \over \partial \delta \).</p>
+            <p class="lead" data-pgc-field="page_description">This method calculates and returns \(&nbsp; \partial v \over \partial \chi_{1 \ell } \) given \(v\) and&nbsp;\(  \partial \dot{v} \over \partial \chi_{1 \ell } \).</p>
             <p class="lead" data-pgc-field="page_lead"></p>
-            <p data-pgc-field="page_info"><dl>
+            <p data-pgc-field="page_info"><dl> 
                     <dt class="h5">Technical description:</dt> 
-                    <dd>This method calculates and returns \( \partial v \over \partial \delta \) given \(v\) and \( \partial \dot{v} \over \partial \delta \). See the theoretical description for how this is done.&nbsp;</dd>
+                    <dd>This method calculates and returns \(  \partial v \over \partial \chi_{1 \ell } \) given \(v\) and \( \partial \dot{v} \over \partial \chi_{1 \ell } \). See the theoretical description for how a formula for&nbsp;\(  \partial v \over \partial \chi_{1 \ell } \) was derived.</dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
                             <tr> 
@@ -79,9 +79,9 @@
                                 <td>Our post newtonian expansion factor \(v = (M \omega)^\frac{1}{3} \).</td> 
                             </tr>                             
                             <tr> 
-                                <th scope="row" class="font-weight-normal"><p>dvdδdot</p></th> 
+                                <th scope="row" class="font-weight-normal">dvdχ1ℓdot</th> 
                                 <td>Double</td>
-                                <td>\( \partial \dot{v} \over \partial \delta \)</td> 
+                                <td>\( \partial \dot{v} \over \partial \chi_{1 \ell } \), the time derivative of \( \partial v \over \partial \chi_{1 \ell } \).</td> 
                             </tr>                             
                         </tbody>                         
                     </table>
@@ -95,31 +95,29 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">dvdδ</th> 
+                                <th scope="row" class="font-weight-normal">dvdχ1ℓ</th> 
                                 <td>Double</td> 
-                                <td>\( \partial v \over \partial \delta \)</td> 
+                                <td>\( \partial v \over \partial \chi_{1 \ell } \)</td> 
                             </tr>                             
                         </tbody>                         
                     </table>                     
                     <dt class="h5">Theoretical description:</dt> 
-                    <dd>
-                        <dd>The derivation of the equation used to calculate&nbsp;\( \partial v \over \partial \delta \) given \(v\) and \( \partial \dot{v} \over \partial \delta \) can be found by rearranging <a href="DerivativeExpressions.html">Equation (1)</a> in the DerivativeExpressions document for&nbsp;\( \partial v \over \partial \delta \).
-                        </dd><span style="color: inherit; font-family: inherit; font-size: 1.25rem;">Usage locations:</span><br/>
+                    <dd>The formula for&nbsp;\(  \partial v \over \partial \chi_{1 \ell } \) was obtained by rearranging <a href="DerivativeExpresions.html">Equation (5)</a> of the DerivativeExpressions document to solve for&nbsp;\(  \partial v \over \partial \chi_{1 \ell } \).&nbsp;
                     </dd>
-                    <dd>This method is used in the <a href="InitDvdδ.html">InitDvdδ</a> method of the Evolver class to initialize the first two values of&nbsp;\( \partial v \over \partial \delta \). For all of the rest of the values of&nbsp;\( \partial v \over \partial \delta \) the leapfrog method is used.&nbsp;
+                    <dt class="h5">Usage locations:</dt>
+                    <dd>This method is called only once in the&nbsp;<a href="InitDvdχ1ℓ.html">InitDvdχ1ℓ</a> method of the Evolver class to intialize \( \partial v \over \partial \chi_{1 \ell } \). For all other calculations of&nbsp;\( \partial v \over \partial \chi_{1 \ell } \) the leapfrog method is used.&nbsp;
                     </dd>
                     <dt class="h5">Usage example:</dt>
-                    <dd class="bg-light ml-4 shadow-sm">
-                        <code class="text-secondary">GetDvdδ(vN,dvdδdotN)</code>
-                    </dd>
+                    <dd class="bg-light ml-4 shadow-sm"><code class="text-secondary">GetDvdχ1ℓ(vN, dvdχ1ℓdot0)</code>
+                    </dd>                     
                 </dl></p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
