--- a/Headers/Documentation/EquationSolver/Methods/GetDvdχ1ℓdot.html
+++ b/Headers/Documentation/EquationSolver/Methods/GetDvdχ1ℓdot.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">SpinEvolver Constructor</title>
+        <title data-pgc-field="page_title">GetDvdχ1ℓdot</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -51,20 +51,19 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">SpinEvolver Constructor</h1>
+                <h1 data-pgc-field="page_heading">GetDvdχ1ℓdot</h1>
                 <div class="mt-3">
-                    <span class="badge badge-secondary">Method</span><span class="badge badge-secondary">(Function, i.e. spin, matrix, time evolution, etc.)</span><span class="badge badge-secondary">Parent Class</span><span class="badge badge-secondary">etc.</span>
+                    <span class="badge badge-secondary">Method</span><span class="badge badge-secondary">Spin Case</span><span class="badge badge-secondary">EquationSolver</span>
                     <div>
                         <p></p>
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">This method initailizes the first two values of \(\iota\), \(\alpha\), \(\hat{L}_N\), \( \vec{\chi}_1 \), and&nbsp;\( \vec{\chi}_2 \).</p>
+            <p class="lead" data-pgc-field="page_description">This method calculates and returns \( \partial \dot{v} \over \partial \chi_{1 \ell} \).</p>
             <p class="lead" data-pgc-field="page_lead"></p>
             <p data-pgc-field="page_info"><dl> 
                     <dt class="h5">Technical description:</dt> 
-                    <dd>First this method sets the values of \(\delta\) and \(\eta\). Then the intial values of&nbsp;\(\iota\), \(\alpha\), and&nbsp;\(\hat{L}_N\) are computed using <a href="Theory1_2022.pdf">Equations (1.32a,b)</a> and <a href="Theory1_2022.pdf">Equation (1.7)</a> respectively. Then \(\hat{\chi}_1\) and&nbsp;\(\hat{\chi}_2\) are defined and used the <a href="GetLNhatdot.html">GetLNhatdot</a> method to obtain \(\dot{\hat{L}}_N\) which is used in Euler&apos;s method to obtain the &quot;Now&quot; value of&nbsp;\(\hat{L}_N\).&nbsp;<a href="Theory1_2022.pdf">Equations (1.32a,b)</a>&nbsp;are then used again to obtain the &quot;Now&quot; values for&nbsp;\(\iota\) and \(\alpha\) from&nbsp;(\hat{L}_N\). Finally, \( d \vec{\chi}_1 \over d \tau \) and&nbsp;\( d \vec{\chi}_2 \over d \tau \) are computed and used in Euler&apos;s method to find the &quot;Now&quot; values of \(\vec{\chi}_1\) and&nbsp;\(\vec{\chi}_2\).&nbsp;
-                    </dd>
+                    <dd>The purpose of this code is to determine \( \partial \dot{v} \over \partial \chi_{2 \ell} \): the rate of change of \( \partial v \over \partial \chi_{2 \ell} \) with respect to a dimensionless time \( \tau_s = \frac{t_{s}}{M} \) in the source frame.  See the theororetical description for information about how a formula for \( \partial \dot{v} \over \partial \chi_{1 \ell} \) was derived.</dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
                             <tr> 
@@ -75,54 +74,14 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal"><p>v0</p></th> 
+                                <th scope="row" class="font-weight-normal">v</th> 
                                 <td>Double</td> 
-                                <td>The initial value of the post newtionian parameter \(v = (M\omega)^{1/3} \)</td> 
+                                <td>Our post newtonian expansion factor \(v = (M \omega)^\frac{1}{3} \).</td> 
                             </tr>                             
                             <tr> 
-                                <th scope="row" class="font-weight-normal"><p>dτ0</p></th> 
+                                <th scope="row" class="font-weight-normal"><p>dvdχ1ℓ</p></th> 
                                 <td>Double</td>
-                                <td>The initial value of a small step in unitless time \(\tau = \frac{t_s}{M} \) where \(t_s\) is time in the source frame.</td> 
-                            </tr>                             
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>myδ</p></th> 
-                                <td>Double</td> 
-                                <td>\( \delta = \frac{ m_1 - m_2 }{m_1 + m_2 } \) a unitless measure of the mass difference between the two stars.</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>Ln0</p></th> 
-                                <td>Double</td> 
-                                <td>The initial value of of the z component of \(\hat{L}_N\)</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>χ1x</p></th> 
-                                <td>Double</td> 
-                                <td>The x component of star 1&apos;s angular momentum \(\vec{\chi}_1 \)</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>χ1y</p></th> 
-                                <td>Double</td> 
-                                <td>The y component of star 1&apos;s angular momentum \(\vec{\chi}_1 \)</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>χ1z</p></th> 
-                                <td>Double</td> 
-                                <td>The z component of star 1&apos;s angular momentum \(\vec{\chi}_1 \)</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>χ2x</p></th> 
-                                <td>Double</td> 
-                                <td>The x component of star 2&apos;s angular momentum \(\vec{\chi}_2 \)</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>χ2y</p></th> 
-                                <td>Double</td> 
-                                <td>The y component of star 2&apos;s angular momentum \(\vec{\chi}_2 \)</td> 
-                            </tr>
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>χ2z</p></th> 
-                                <td>Double</td> 
-                                <td>The z component of star 2&apos;s angular momentum \(\vec{\chi}_2 \)</td> 
+                                <td>\( \partial v \over \partial \chi_{1 \ell} \).</td> 
                             </tr>                             
                         </tbody>                         
                     </table>
@@ -136,24 +95,29 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">None</th> 
-                                <td>N/A</td> 
-                                <td>N/A</td> 
+                                <th scope="row" class="font-weight-normal">dvdχ1ℓdot</th> 
+                                <td>Double</td> 
+                                <td>\( \partial \dot{v} \over \partial \chi_{1 \ell} \).</td> 
                             </tr>                             
                         </tbody>                         
                     </table>                     
                     <dt class="h5">Theoretical description:</dt> 
-                    <dd>A discussion of Euler&apos;s method can be found surrounding Equation (1.13) in the Theory1 document</dd>
+                    <dd>The derivation of a formula for \( \partial \dot{v} \over \partial \chi_{1 \ell} \) can be found in <a href="DerivativeExpressions">Equation (5)</a> of the DerivativeExpressions document.&nbsp;
+                    </dd>
                     <dt class="h5">Usage locations:</dt>
-                    <dd>This method is called each time an instance of&nbsp;ιαEvolver is created.</dd>                     
+                    <dd>This method is used in the <a href="InitDvdχ1ℓ.html">InitDvdχ1ℓ</a>&nbsp;method of the Evolver class to initialize the first two values of&nbsp;\( \partial v \over \partial \chi_{1 \ell} \), it is also used in the <a href="DoStep.html">DoStep</a> method to propegate \( \partial v \over \partial \chi_{1 \ell} \) through time.&nbsp;
+                    </dd>
+                    <dt class="h5">Usage example:</dt>
+                    <dd class="bg-light ml-4 shadow-sm"><code class="text-secondary">GetDvdχ1ℓdot(vN,dvdδN)</code>
+                    </dd>                     
                 </dl></p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
