--- a/Headers/Documentation/EquationSolver/Methods/GetDvdχ2ℓdot.html
+++ b/Headers/Documentation/EquationSolver/Methods/GetDvdχ2ℓdot.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">InitV</title>
+        <title data-pgc-field="page_title">GetDvdχ2ℓdot</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -44,21 +44,20 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">InitV</h1>
+                <h1 data-pgc-field="page_heading">GetDvdχ2ℓdot</h1>
                 <div class="mt-3"><span class="badge badge-secondary">Method</span>
                     <span class="badge badge-secondary">Spin Case</span>
-                    <span class="badge badge-secondary">Evolver</span>
+                    <span class="badge badge-secondary">EquationSolver</span>
                     <div>
                         <p></p>
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">this method initializes \(v\) by calculating and setting its first two values.</p>
+            <p class="lead" data-pgc-field="page_description">This method calculates and returns \( \partial \dot{v} \over \partial \chi_{2 \ell} \).</p>
             <p class="lead" data-pgc-field="page_lead"></p>
             <p data-pgc-field="page_info"><dl> 
                     <dt class="h5">Technical description:</dt> 
-                    <dd>The parameter \(v_0\) is passed into the program by the user and is set as the past value of \(v\). This method then uses the EquationSolver class&apos;s <a href="GetVdot.html">GetVdot</a> method to analytically calculate \(\dot{v}\); the derivative of \(v\) with respect to unitless time \(\tau_s = \frac{t_s}{M} \) in the source frame. Using this time derivative and Euler&apos;s method, this method then calculates and sets the present value of \(v\).
-                    </dd>
+                    <dd>The purpose of this code is to determine \( \partial \dot{v} \over \partial \chi_{2 \ell} \): the rate of change of \( \partial v \over \partial \chi_{2 \ell} \) with respect to a dimensionless time \( \tau_s = \frac{t_{s}}{M} \) in the source frame.&nbsp;See the theororetical description for information about how a formula for \( \partial \dot{v} \over \partial \chi_{2 \ell} \) was derived.</dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
                             <tr> 
@@ -69,9 +68,14 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">None</th> 
-                                <td>N/A</td> 
-                                <td>N/A</td> 
+                                <th scope="row" class="font-weight-normal">v</th> 
+                                <td>Double</td> 
+                                <td>Our post newtonian expansion factor \(v = (M \omega)^\frac{1}{3} \).</td> 
+                            </tr>                             
+                            <tr> 
+                                <th scope="row" class="font-weight-normal"><p>dvdχ2ℓ</p></th> 
+                                <td>Double</td>
+                                <td>\( \partial v \over \partial \chi_{2 \ell} \).</td> 
                             </tr>                             
                         </tbody>                         
                     </table>
@@ -85,19 +89,20 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">None</th> 
-                                <td>N/A</td> 
-                                <td>N/A</td> 
+                                <th scope="row" class="font-weight-normal">dvdχ2ℓdot</th> 
+                                <td>Double</td> 
+                                <td>\( \partial \dot{v} \over \partial \chi_{2 \ell} \).</td> 
                             </tr>                             
                         </tbody>                         
                     </table>                     
                     <dt class="h5">Theoretical description:</dt> 
-                    <dd>This method is passed \(v_0 \) and uses Euler&apos;s method to initialize the second value of \(v\). For all future values of \(v\) the leapfrog method is used. See the discussion surround <a href="Theory1_2022.pdf">Equation (1.13)</a> in the Theory1 document for more.
+                    <dd>The derivation of a formula for \( \partial \dot{v} \over \partial \chi_{2 \ell} \) can be found in <a href="DerivativeExpressions.pdf">Equation (8)</a> of the DerivativeExpressions document.&nbsp;
                     </dd>
                     <dt class="h5">Usage locations:</dt>
-                    <dd>This method is called once in the constructor of the Evolver class.&nbsp;</dd>
+                    <dd>This method is used in the <a href="InitDvdχ2ℓ.html">InitDvdχ2ℓ</a>&nbsp;method of the Evolver class to initialize the first two values of&nbsp;\( \partial v \over \partial \chi_{2 \ell} \), it is also used in the <a href="DoStep.html">DoStep</a> method to propegate \( \partial v \over \partial \chi_{2 \ell} \) through time.&nbsp;
+                    </dd>
                     <dt class="h5">Usage example:</dt>
-                    <dd class="bg-light ml-4 shadow-sm"><code class="text-secondary">InitV</code>
+                    <dd class="bg-light ml-4 shadow-sm"><code class="text-secondary">GetDvdχ2ℓdot(vN,dvdδN)</code>
                     </dd>                     
                 </dl></p>
         </div>
@@ -105,8 +110,8 @@
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
