--- a/Headers/Documentation/EquationSolver/Methods/GetVdot.html
+++ b/Headers/Documentation/EquationSolver/Methods/GetVdot.html
@@ -6,33 +6,40 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">GetDvdχ2ℓdot</title>
+        <title data-pgc-field="page_title">GetVdot</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"><a class="navbar-brand" href="#">LISA Project</a>
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="#">LISA Project</a><a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" data-pgc-field="documentation_link">Home</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html" data-pgc-field="documentation_link">Home</a>
                     </li>
-                    <li class="nav-item"><a class="active nav-link" href="documentation.html" data-pgc-field="documentation_link">Documentation</a>
+                    <li class="nav-item">
+                        <a class="active nav-link" href="documentation.html" data-pgc-field="documentation_link">Documentation</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="theory.html" data-pgc-field="theory_link">Theory</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="theory.html" data-pgc-field="theory_link">Theory</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="procedures.html" data-pgc-field="procedures_link">Procedures</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="procedures.html" data-pgc-field="procedures_link">Procedures</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="education.html" data-pgc-field="education_link">Education</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="education.html" data-pgc-field="education_link">Education</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="testing.html" data-pgc-field="testing_link">Testing</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="testing.html" data-pgc-field="testing_link">Testing</a>
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
@@ -44,20 +51,19 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">GetDvdχ2ℓdot</h1>
-                <div class="mt-3"><span class="badge badge-secondary">Method</span>
-                    <span class="badge badge-secondary">Spin Case</span>
-                    <span class="badge badge-secondary">EquationSolver</span>
+                <h1 data-pgc-field="page_heading">GetVdot</h1>
+                <div class="mt-3">
+                    <span class="badge badge-secondary">Method</span><span class="badge badge-secondary">Spin Case</span><span class="badge badge-secondary">EquationSolver</span>
                     <div>
                         <p></p>
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">This method calculates and returns \( \partial \dot{v} \over \partial \chi_{2 \ell} \).</p>
+            <p class="lead" data-pgc-field="page_description">This method calculates and returns \(\dot{v}\) given \(v\).</p>
             <p class="lead" data-pgc-field="page_lead"></p>
-            <p data-pgc-field="page_info"><dl> 
+            <p data-pgc-field="page_info"><dl>
                     <dt class="h5">Technical description:</dt> 
-                    <dd>The purpose of this code is to determine \( \partial \dot{v} \over \partial \chi_{2 \ell} \): the rate of change of \( \partial v \over \partial \chi_{2 \ell} \) with respect to a dimensionless time \( \tau_s = \frac{t_{s}}{M} \) in the source frame.&nbsp;See the theororetical description for information about how a formula for \( \partial \dot{v} \over \partial \chi_{2 \ell} \) was derived.</dd>
+                    <dd>This method calculates and returns&nbsp;\(\dot{v}\), the derivative of \(v\) with respect to a dimensionless time \( \tau_s = \frac{t_{s}}{M} \) in the source frame, given \(v\).</dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
                             <tr> 
@@ -70,12 +76,7 @@
                             <tr> 
                                 <th scope="row" class="font-weight-normal">v</th> 
                                 <td>Double</td> 
-                                <td>Our post newtonian expansion factor \(v = (M \omega)^\frac{1}{3} \).</td> 
-                            </tr>                             
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>dvdχ2ℓ</p></th> 
-                                <td>Double</td>
-                                <td>\( \partial v \over \partial \chi_{2 \ell} \).</td> 
+                                <td>Our post newtonian expansion factor \(v = (M \omega)^\frac{1}{3} \)</td> 
                             </tr>                             
                         </tbody>                         
                     </table>
@@ -89,29 +90,28 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">dvdχ2ℓdot</th> 
-                                <td>Double</td> 
-                                <td>\( \partial \dot{v} \over \partial \chi_{2 \ell} \).</td> 
+                                <th scope="row" class="font-weight-normal">vdot</th> 
+                                <td>Double</td>
+                                <td>The derivative of \(v\) with respect to a dimensionless time \( \tau_s = \frac{t_{s}}{M} \) in the source frame.</td> 
                             </tr>                             
                         </tbody>                         
                     </table>                     
                     <dt class="h5">Theoretical description:</dt> 
-                    <dd>The derivation of a formula for \( \partial \dot{v} \over \partial \chi_{2 \ell} \) can be found in <a href="DerivativeExpressions.pdf">Equation (8)</a> of the DerivativeExpressions document.&nbsp;
+                    <dd>See <a href="Theory1_2022.pdf">Equation (1.9)</a> of the Theory1 document for an expression for \(\dot{v}\).
                     </dd>
                     <dt class="h5">Usage locations:</dt>
-                    <dd>This method is used in the <a href="InitDvdχ2ℓ.html">InitDvdχ2ℓ</a>&nbsp;method of the Evolver class to initialize the first two values of&nbsp;\( \partial v \over \partial \chi_{2 \ell} \), it is also used in the <a href="DoStep.html">DoStep</a> method to propegate \( \partial v \over \partial \chi_{2 \ell} \) through time.&nbsp;
-                    </dd>
+                    <dd>This method is used in the InitV, InitDvdδ,&nbsp;InitDvdχ1ℓ, and&nbsp;InitDvdχ2ℓ methods to intialize the first two values of each parameter. It is also used in the DoStep method to propegate \( v \) through time.</dd>
                     <dt class="h5">Usage example:</dt>
-                    <dd class="bg-light ml-4 shadow-sm"><code class="text-secondary">GetDvdχ2ℓdot(vN,dvdδN)</code>
-                    </dd>                     
+                    <dd class="bg-light ml-4 shadow-sm"><code class="text-secondary">GetVdot(vN)</code>
+                    </dd>
                 </dl></p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
