--- a/Headers/Documentation/Evolver/Methods/InitDvdχ2ℓ.html
+++ b/Headers/Documentation/Evolver/Methods/InitDvdχ2ℓ.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">EquationSolver Constructor</title>
+        <title data-pgc-field="page_title">InitDvdχ2ℓ</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -44,20 +44,20 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">EquationSolver Constructor</h1>
+                <h1 data-pgc-field="page_heading">InitDvdχ2ℓ</h1>
                 <div class="mt-3"><span class="badge badge-secondary">Method</span>
                     <span class="badge badge-secondary">Spin Case</span>
-                    <span class="badge badge-secondary">EquationSolver</span>
+                    <span class="badge badge-secondary">Evolver</span>
                     <div>
                         <p></p>
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">Initializes all relevant properties of the EquationSolver Class</p>
+            <p class="lead" data-pgc-field="page_description">This method initializes&nbsp;\( \partial v \over \partial&nbsp;\chi_{2 \ell} \) by calculating and setting its first two values.</p>
             <p class="lead" data-pgc-field="page_lead"></p>
             <p data-pgc-field="page_info"><dl> 
                     <dt class="h5">Technical description:</dt> 
-                    <dd>Initializes c1 - c25,&nbsp;δ, η, χs, χa,&nbsp;dηdδ, dχsdδ, dχsdχ1ℓ, dχsdχ2ℓ, dχadδ, dχadχ1ℓ, dχadχ2ℓ,&nbsp;χ1 and&nbsp;χ2. Descriptions of these values can be found on the <a href="EquationSolver.html">EquationSolver class page</a>.
+                    <dd>In order to initialize \( \partial v \over \partial \chi_{2 \ell} \) we must calculate both the past and current value of \( \partial v \over \partial \chi_{2 \ell} \). The code first calculates the past value of \( \partial \dot{v} \over \partial \chi_{2 \ell} \) which is the derivative of \( \partial v \over \partial \chi_{2 \ell} \) with respect to unitless time \(\tau_s = \frac{t_s}{M}\) in the source frame. It does this by creating two paralell simulations with differing values of \( \chi_{2 \ell} \) ; one simulation uses a value of \( \chi_{2 \ell} + \Delta \chi_{2 \ell} \) and the other uses \( \chi_{2 \ell} - \Delta \chi_{2 \ell} \). Currently the code uses a value of \( \Delta \chi_{2 \ell} = 10^{-6}\). The code then performs the cenetered difference between these two paralell simulations to obtain \( \partial \dot{v} \over \partial \chi_{2 \ell} \). The code then feeds this value to the EquationSolver class&apos;s <a href="GetDvdχ2ℓ.html">GetDvdχ2ℓ</a> method which contains an analytic solution for \( \partial v \over \partial \chi_{2 \ell} \) given \(v\) and \( \partial \dot{v} \over \partial \chi_{2 \ell} \). This becomes the past value of \( \partial v \over \partial \chi_{2 \ell} \), and Euler&apos;s method is used to obtain the present value of \( \partial v \over \partial \chi_{2 \ell} \).
                     </dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
@@ -91,19 +91,23 @@
                             </tr>                             
                         </tbody>                         
                     </table>                     
-                    <dt class="h5">Usage locations:</dt>
-                    <dd>This method is called each time a new instance of the EquationSolver class is created. Most importantly an instance of this class is created in the constructor of the <a href="Evolver.html">Evolver class</a>, which is used throughout that method to aid in calculations.
+                    <dt class="h5">Theoretical description:</dt> 
+                    <dd>This method provides the initial two values for \( \partial v \over \partial \chi_{2 \ell} \) that will be used to propegate the simulation forward in time. This method uses the centered difference equation to obtain an initial value for \( \partial \dot{v} \over \partial \chi_{2 \ell} \), see <a href="file:///Users/coreydibianco/Downloads/InProgress/Theory1_2022.pdf">Equation (1.16)</a> of the Theory1 document for more information on the centered difference method. This method then uses Euler&apos;s equation to obtain the second value of \( \partial v \over \partial \chi_{2 \ell} \). See the discussion surrounding <a href="file:///Users/coreydibianco/Downloads/InProgress/Theory1_2022.pdf">Equation (1.13)</a> in the Theory1 document for more regarding Euler&apos;s method.
                     </dd>
+                    <dt class="h5">Usage locations:</dt>
+                    <dd>This method is called only once in the constructor for the Evolver class.&nbsp;</dd>
+                    <dt class="h5">Usage example:</dt>
                     <dd class="bg-light ml-4 shadow-sm">
-</dd>                     
+                        <code class="text-secondary">InitInitDvdχ2ℓ</code>
+                    </dd>                     
                 </dl></p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
