--- a/Headers/Documentation/SpinEvolver/Methods/SpinEvolverConstructor.html
+++ b/Headers/Documentation/SpinEvolver/Methods/SpinEvolverConstructor.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">Evolver Constructor</title>
+        <title data-pgc-field="page_title">SpinEvolver Constructor</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../../../../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../../../../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -51,19 +51,20 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">Evolver Constructor</h1>
+                <h1 data-pgc-field="page_heading">SpinEvolver Constructor</h1>
                 <div class="mt-3">
-                    <span class="badge badge-secondary">Method</span><span class="badge badge-secondary">Spin Case</span><span class="badge badge-secondary">Evolver</span>
+                    <span class="badge badge-secondary">Method</span><span class="badge badge-secondary">(Function, i.e. spin, matrix, time evolution, etc.)</span><span class="badge badge-secondary">Parent Class</span><span class="badge badge-secondary">etc.</span>
                     <div>
                         <p></p>
                     </div>
                 </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">Sets the intiail values \( d \tau \), \(v\),\(\delta\),\(\chi_{1 \ell}\), and&nbsp;\(\chi_{2 \ell}\) using parameters passed into the constuctor. Also initializes the first two values of \(v\), \( \partial v \over \partial \delta \),&nbsp;\( \partial v \over \partial \chi_{1 \ell} \), and&nbsp;\( \partial v \over \partial \chi_{2 \ell} \).&nbsp;</p>
+            <p class="lead" data-pgc-field="page_description">This method initailizes the first two values of \(\iota\), \(\alpha\), \(\hat{L}_N\), \( \vec{\chi}_1 \), and&nbsp;\( \vec{\chi}_2 \).</p>
             <p class="lead" data-pgc-field="page_lead"></p>
             <p data-pgc-field="page_info"><dl> 
                     <dt class="h5">Technical description:</dt> 
-                    <dd>This constructor uses parameters passed into it to set initial values for&nbsp;\( d \tau \), \(v\),\(\delta\),\(\chi_{1 \ell}\), and \(\chi_{2 \ell}\). The code then calls InitV, InitDvdδ,&nbsp;InitDvdχ1ℓ, and&nbsp;InitDvdχ2ℓ to set up the first two values of&nbsp;\(v\),&nbsp;\( \partial v \over \partial \delta \),&nbsp;\( \partial v \over \partial \chi_{1 \ell} \), and \( \partial v \over \partial \chi_{2 \ell} \) respectively.</dd>
+                    <dd>First this method sets the values of \(\delta\) and \(\eta\). Then the intial values of&nbsp;\(\iota\), \(\alpha\), and&nbsp;\(\hat{L}_N\) are computed using <a href="Theory1_2022.pdf">Equations (1.32a,b)</a> and <a href="Theory1_2022.pdf">Equation (1.7)</a> respectively. Then \(\hat{\chi}_1\) and&nbsp;\(\hat{\chi}_2\) are defined and used the <a href="GetLNhatdot.html">GetLNhatdot</a> method to obtain \(\dot{\hat{L}}_N\) which is used in Euler&apos;s method to obtain the &quot;Now&quot; value of&nbsp;\(\hat{L}_N\).&nbsp;<a href="Theory1_2022.pdf">Equations (1.32a,b)</a>&nbsp;are then used again to obtain the &quot;Now&quot; values for&nbsp;\(\iota\) and \(\alpha\) from&nbsp;(\hat{L}_N\). Finally, \( d \vec{\chi}_1 \over d \tau \) and&nbsp;\( d \vec{\chi}_2 \over d \tau \) are computed and used in Euler&apos;s method to find the &quot;Now&quot; values of \(\vec{\chi}_1\) and&nbsp;\(\vec{\chi}_2\).&nbsp;
+                    </dd>
                     <table class="border table table-bordered" data-pgc="parameter_table" data-pgc-field="parameter_table"> 
                         <thead> 
                             <tr> 
@@ -74,29 +75,54 @@
                         </thead>                         
                         <tbody> 
                             <tr> 
-                                <th scope="row" class="font-weight-normal">mydτ0</th> 
+                                <th scope="row" class="font-weight-normal"><p>v0</p></th> 
                                 <td>Double</td> 
-                                <td>The initial timestep to be used in the centered difference equation to propegate each value.</td> 
+                                <td>The initial value of the post newtionian parameter \(v = (M\omega)^{1/3} \)</td> 
                             </tr>                             
                             <tr> 
-                                <th scope="row" class="font-weight-normal"><p>myv0</p></th> 
+                                <th scope="row" class="font-weight-normal"><p>dτ0</p></th> 
                                 <td>Double</td>
-                                <td>The initial value of v, equal to \((2\pi M f_0)^{1/3} \)</td> 
-                            </tr>
+                                <td>The initial value of a small step in unitless time \(\tau = \frac{t_s}{M} \) where \(t_s\) is time in the source frame.</td> 
+                            </tr>                             
                             <tr> 
                                 <th scope="row" class="font-weight-normal"><p>myδ</p></th> 
-                                <td>Double</td>
-                                <td>The intial value of&nbsp; \(\delta = \) \( m_1 - m_2 \over m_1 + m_2 \)</td> 
+                                <td>Double</td> 
+                                <td>\( \delta = \frac{ m_1 - m_2 }{m_1 + m_2 } \) a unitless measure of the mass difference between the two stars.</td> 
                             </tr>
                             <tr> 
-                                <th scope="row" class="font-weight-normal"><p>myχ1ℓ</p><p></p></th> 
-                                <td>Double</td>
-                                <td>The initial value of \( \chi_{1 \ell} \), which is passed in by the user</td> 
-                            </tr>                             
-                            <tr> 
-                                <th scope="row" class="font-weight-normal"><p>myχ2ℓ</p></th> 
+                                <th scope="row" class="font-weight-normal"><p>Ln0</p></th> 
                                 <td>Double</td> 
-                                <td>The initial value of \( \chi_{2 \ell} \), which is passed in by the user</td> 
+                                <td>The initial value of of the z component of \(\hat{L}_N\)</td> 
+                            </tr>
+                            <tr> 
+                                <th scope="row" class="font-weight-normal"><p>χ1x</p></th> 
+                                <td>Double</td> 
+                                <td>The x component of star 1&apos;s angular momentum \(\vec{\chi}_1 \)</td> 
+                            </tr>
+                            <tr> 
+                                <th scope="row" class="font-weight-normal"><p>χ1y</p></th> 
+                                <td>Double</td> 
+                                <td>The y component of star 1&apos;s angular momentum \(\vec{\chi}_1 \)</td> 
+                            </tr>
+                            <tr> 
+                                <th scope="row" class="font-weight-normal"><p>χ1z</p></th> 
+                                <td>Double</td> 
+                                <td>The z component of star 1&apos;s angular momentum \(\vec{\chi}_1 \)</td> 
+                            </tr>
+                            <tr> 
+                                <th scope="row" class="font-weight-normal"><p>χ2x</p></th> 
+                                <td>Double</td> 
+                                <td>The x component of star 2&apos;s angular momentum \(\vec{\chi}_2 \)</td> 
+                            </tr>
+                            <tr> 
+                                <th scope="row" class="font-weight-normal"><p>χ2y</p></th> 
+                                <td>Double</td> 
+                                <td>The y component of star 2&apos;s angular momentum \(\vec{\chi}_2 \)</td> 
+                            </tr>
+                            <tr> 
+                                <th scope="row" class="font-weight-normal"><p>χ2z</p></th> 
+                                <td>Double</td> 
+                                <td>The z component of star 2&apos;s angular momentum \(\vec{\chi}_2 \)</td> 
                             </tr>                             
                         </tbody>                         
                     </table>
@@ -116,18 +142,18 @@
                             </tr>                             
                         </tbody>                         
                     </table>                     
+                    <dt class="h5">Theoretical description:</dt> 
+                    <dd>A discussion of Euler&apos;s method can be found surrounding Equation (1.13) in the Theory1 document</dd>
                     <dt class="h5">Usage locations:</dt>
-                    <dd>UPDATE LATER</dd>
-                    <dd class="bg-light ml-4 shadow-sm">
-</dd>                     
+                    <dd>This method is called each time an instance of&nbsp;ιαEvolver is created.</dd>                     
                 </dl></p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../../../assets/js/jquery.min.js"></script>
+        <script src="../../../../assets/js/popper.js"></script>
+        <script src="../../../../bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
